# shorust

./: Cargo.toml  README.md  urls.db
src/: db.rs  errors.rs  index.html  main.rs
