[package]
name = "shorust"
version = "1.0.1"
description = "A simple url shortener server made in rust."
readme = "README.md"
repository = "https://github.com/edg-l/shorust"
license = "MIT"
keywords = ["url", "shortener", "short", "link", "server"]
categories = ["web-programming::http-server", "web-programming"]
authors = ["Edgar <git@edgarluque.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-ratelimit = "0.3.1"
actix-rt = "1.1.1"
actix-web = "3.3.2"
clap = "3.0.0-beta.2"
env_logger = "0.8.2"
futures = "0.3.12"
log = "0.4.13"
num_cpus = "1.13.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
rand = "0.8.2"
regex = "1.4.3"
rusqlite = "0.24.2"
serde = "1.0.120"
thiserror = "1.0.23"
validator = { version = "0.12.0", features = ["derive"] }
